force-app/main/default/objects/HabilidadeContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <description>Campo de relacionamento entre Habilidade e Contato.</description>
    <inlineHelpText>Campo de relacionamento entre Habilidade e Contato.</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Habilidades do Contato</relationshipLabel>
    <relationshipName>Habilidades_do_Contato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>