force-app/main/default/objects/HabilidadeContato__c/fields/Level_Habilidade__c.field-meta.xml
<CustomField>
    <fullName>Level_Habilidade__c</fullName>
    <description>Level da Habilidade do Herói</description>
    <inlineHelpText>Insira o valor do nível da Habilidade para esse Herói</inlineHelpText>
    <label>Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>