force-app/main/default/objects/HabilidadeContato__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Colocação do Nível do Herói.</description>
    <inlineHelpText>Selecionar as maiores Habilidades do Herói.</inlineHelpText>
    <label>Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>