force-app/main/default/objects/HabilidadeContato__c/validationRules/ValidarRangerLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarRangerLevel</fullName>
    <active>true</active>
    <description>Garantir que o valor do Level ficara entre 0 e 100</description>
    <errorConditionFormula>OR( Level_Habilidade__c &lt;0,Level_Habilidade__c  &gt; 100)</errorConditionFormula>
    <errorDisplayField>Level_Habilidade__c</errorDisplayField>
    <errorMessage>Valor do Level deverá ser entre 0 e 100</errorMessage>
</ValidationRule>